@@ -201,28 +201,28 @@ extern "C"
 #include <poldiff/util.h>
 
 /* NOTE: while defined OCONS are not currently supported */
-#define POLDIFF_DIFF_CLASSES     0x00000001
-#define POLDIFF_DIFF_COMMONS     0x00000002
-#define POLDIFF_DIFF_TYPES       0x00000004
-#define POLDIFF_DIFF_ATTRIBS     0x00000008
-#define POLDIFF_DIFF_ROLES       0x00000010
-#define POLDIFF_DIFF_USERS       0x00000020
-#define POLDIFF_DIFF_BOOLS       0x00000040
-#define POLDIFF_DIFF_LEVELS      0x00000080
-#define POLDIFF_DIFF_CATS        0x00000100
-#define POLDIFF_DIFF_ROLE_ALLOWS 0x00000800
-#define POLDIFF_DIFF_ROLE_TRANS  0x00001000
-#define POLDIFF_DIFF_RANGE_TRANS 0x00002000
-#define POLDIFF_DIFF_AVALLOW     0x10000000
-#define POLDIFF_DIFF_AVNEVERALLOW 0x20000000
-#define POLDIFF_DIFF_AVAUDITALLOW 0x40000000
-#define POLDIFF_DIFF_AVDONTAUDIT 0x80000000
-#define POLDIFF_DIFF_TEMEMBER    0x01000000
-#define POLDIFF_DIFF_TECHANGE    0x02000000
-#define POLDIFF_DIFF_TETRANS     0x04000000
+#define POLDIFF_DIFF_CLASSES       0x00000001U
+#define POLDIFF_DIFF_COMMONS       0x00000002U
+#define POLDIFF_DIFF_TYPES         0x00000004U
+#define POLDIFF_DIFF_ATTRIBS       0x00000008U
+#define POLDIFF_DIFF_ROLES         0x00000010U
+#define POLDIFF_DIFF_USERS         0x00000020U
+#define POLDIFF_DIFF_BOOLS         0x00000040U
+#define POLDIFF_DIFF_LEVELS        0x00000080U
+#define POLDIFF_DIFF_CATS          0x00000100U
+#define POLDIFF_DIFF_ROLE_ALLOWS   0x00000800U
+#define POLDIFF_DIFF_ROLE_TRANS    0x00001000U
+#define POLDIFF_DIFF_RANGE_TRANS   0x00002000U
+#define POLDIFF_DIFF_AVALLOW       0x10000000U
+#define POLDIFF_DIFF_AVNEVERALLOW  0x20000000U
+#define POLDIFF_DIFF_AVAUDITALLOW  0x40000000U
+#define POLDIFF_DIFF_AVDONTAUDIT   0x80000000U
+#define POLDIFF_DIFF_TEMEMBER      0x01000000U
+#define POLDIFF_DIFF_TECHANGE      0x02000000U
+#define POLDIFF_DIFF_TETRANS       0x04000000U
 
-#define POLDIFF_DIFF_TERULES_COMPAT 0x00000400
-#define POLDIFF_DIFF_AVRULES_COMPAT 0x00000200
+#define POLDIFF_DIFF_TERULES_COMPAT 0x00000400U
+#define POLDIFF_DIFF_AVRULES_COMPAT 0x00000200U
 
 #define POLDIFF_DIFF_AVRULES     (POLDIFF_DIFF_AVALLOW | POLDIFF_DIFF_AVNEVERALLOW | POLDIFF_DIFF_AVAUDITALLOW | POLDIFF_DIFF_AVDONTAUDIT | POLDIFF_DIFF_AVRULES_COMPAT )
 #define POLDIFF_DIFF_TERULES     (POLDIFF_DIFF_TEMEMBER | POLDIFF_DIFF_TECHANGE | POLDIFF_DIFF_TETRANS | POLDIFF_DIFF_TERULES_COMPAT)
@@ -231,7 +231,7 @@ extern "C"
  * #define POLDIFF_DIFF_ *
  */
 #define POLDIFF_DIFF_SYMBOLS (POLDIFF_DIFF_CLASSES|POLDIFF_DIFF_COMMONS|POLDIFF_DIFF_TYPES|POLDIFF_DIFF_ATTRIBS|POLDIFF_DIFF_ROLES|POLDIFF_DIFF_USERS|POLDIFF_DIFF_BOOLS)
-#define POLDIFF_DIFF_RULES (POLDIFF_DIFF_AVRULES|POLDIFF_DIFF_AVNEVERALLOW|POLDIFF_DIFF_TERULES|POLDIFF_DIFF_ROLE_ALLOWS|POLDIFF_DIFF_ROLE_TRANS)
+#define POLDIFF_DIFF_RULES (POLDIFF_DIFF_AVRULES|POLDIFF_DIFF_TERULES|POLDIFF_DIFF_ROLE_ALLOWS|POLDIFF_DIFF_ROLE_TRANS)
 #define POLDIFF_DIFF_RBAC (POLDIFF_DIFF_ROLES|POLDIFF_DIFF_ROLE_ALLOWS|POLDIFF_DIFF_ROLE_TRANS)
 #define POLDIFF_DIFF_MLS (POLDIFF_DIFF_LEVELS|POLDIFF_DIFF_CATS|POLDIFF_DIFF_RANGE_TRANS)
 #define POLDIFF_DIFF_OCONS 0
